--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,101 +10,103 @@
     <link rel="stylesheet" href="/static/css/common.css"/>
 
     <!-- Bootstrap -->
-    
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <script src="/static/js/html5shiv.min.js"></script>
+    <script src="/static/js/respond.min.js"></script>
     <![endif]-->
 
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
-      <!-- if using RTL (Right-To-Left) orientation, load the RTL CSS file after fileinput.css by uncommenting below -->
-      <!-- link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/css/fileinput-rtl.min.css" media="all" rel="stylesheet" type="text/css" /-->
-      <!-- optionally uncomment line below if using a theme or icon set like font awesome (note that default icons used are glyphicons and `fa` theme can override it) -->
-      <!-- link https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css media="all" rel="stylesheet" type="text/css" /-->
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <!-- piexif.min.js is only needed for restoring exif data in resized images and when you 
-          wish to resize images before upload. This must be loaded before fileinput.min.js -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/piexif.min.js" type="text/javascript"></script>
-      <!-- sortable.min.js is only needed if you wish to sort / rearrange files in initial preview. 
-          This must be loaded before fileinput.min.js -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/sortable.min.js" type="text/javascript"></script>
-      <!-- purify.min.js is only needed if you wish to purify HTML content in your preview for 
-          HTML files. This must be loaded before fileinput.min.js -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/purify.min.js" type="text/javascript"></script>
-      <!-- popper.min.js below is needed if you use bootstrap 4.x. You can also use the bootstrap js 
-         3.3.x versions without popper.min.js. -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-      <!-- bootstrap.min.js below is needed if you wish to zoom and preview file content in a detail modal
-          dialog. bootstrap 4.x is supported. You can also use the bootstrap js 3.3.x versions. -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" type="text/javascript"></script>
-      <!-- the main fileinput plugin file -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/fileinput.min.js"></script>
-      <!-- optionally uncomment line below for loading your theme assets for a theme like Font Awesome (`fa`) -->
-      <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/themes/fa/theme.min.js"></script -->
-      <!-- optionally if you need translation for your language then include  locale file as mentioned below -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/locales/zh.min.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link href="/static/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css"/>
+    <!-- if using RTL (Right-To-Left) orientation, load the RTL CSS file after fileinput.css by uncommenting below -->
+    <!-- link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/css/fileinput-rtl.min.css" media="all" rel="stylesheet" type="text/css" /-->
+    <!-- optionally uncomment line below if using a theme or icon set like font awesome (note that default icons used are glyphicons and `fa` theme can override it) -->
+    <!-- link https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css media="all" rel="stylesheet" type="text/css" /-->
+    <script src="/static/js/jquery-3.2.1.min.js"></script>
+    <!-- piexif.min.js is only needed for restoring exif data in resized images and when you
+        wish to resize images before upload. This must be loaded before fileinput.min.js -->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/piexif.min.js" type="text/javascript"></script>-->
+    <script src="/static/js/plugins/piexif.min.js" type="text/javascript"></script>
+    <!-- sortable.min.js is only needed if you wish to sort / rearrange files in initial preview.
+        This must be loaded before fileinput.min.js -->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/sortable.min.js" type="text/javascript"></script>-->
+    <script src="/static/js/plugins/sortable.min.js" type="text/javascript"></script>
+    <!-- purify.min.js is only needed if you wish to purify HTML content in your preview for
+        HTML files. This must be loaded before fileinput.min.js -->
+    <script src="/static/js/plugins/purify.min.js" type="text/javascript"></script>
+    <!-- popper.min.js below is needed if you use bootstrap 4.x. You can also use the bootstrap js
+       3.3.x versions without popper.min.js. -->
+    <script src="/static/js/popper.min.js"></script>
+    <!-- bootstrap.min.js below is needed if you wish to zoom and preview file content in a detail modal
+        dialog. bootstrap 4.x is supported. You can also use the bootstrap js 3.3.x versions. -->
+    <script src="/static/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- the main fileinput plugin file -->
+    <script src="/static/js/fileinput.min.js"></script>
+    <!-- optionally uncomment line below for loading your theme assets for a theme like Font Awesome (`fa`) -->
+    <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/themes/fa/theme.min.js"></script -->
+    <!-- optionally if you need translation for your language then include  locale file as mentioned below -->
+    <script src="/static/js/locales/zh.min.js"></script>
 
-      <script src="/static/js/plugins/piexif.js"></script>
-      <script src="/static/js/fileinput.js"></script>
-      <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/js/plugins/piexif.js"></script>
+    <script src="/static/js/fileinput.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
-  </head>
-  <body>
+</head>
+<body>
 
-    <div class="skinBg" style="background-image: url('/static/images/65.jpg');"></div>
+<div class="skinBg" style="background-image: url('/static/images/65.jpg');"></div>
 
-    <div class="content tc">
-      <p class="logo"><img width="270" height="259" src="/static/images/logo.png" alt="logo" /></p>
-    </div>
+<div class="content tc">
+    <p class="logo"><img width="270" height="259" src="/static/images/logo.png" alt="logo"/></p>
+</div>
 
-    <div class="col-xs-12 col-md-offset-3">
-      <div class="col-lg-6">
-          <div class="input-group">
-              <input type="text" class="form-control" placeholder="在此处输入图片种类......">
-              <span class="input-group-btn">
-                  <button  id="input-image-1" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" aria-label="Left Align">
+<div class="col-xs-12 col-md-offset-3">
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="在此处输入图片种类......">
+            <span class="input-group-btn">
+                  <button id="input-image-1" type="button" class="btn btn-primary" data-toggle="modal"
+                          data-target="#exampleModal" aria-label="Left Align">
                     <span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
                   </button>
-                  <button class="btn btn-default" type="button">搜图一下</button>
+                  <button class="btn btn-default" id="search_img" type="button">搜图一下</button>
               </span>
-          </div><!-- /input-group -->
-       </div><!-- /.col-lg-6 -->
-     </div>
+        </div><!-- /input-group -->
+    </div><!-- /.col-lg-6 -->
+</div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
 
 
+            <div class="modal-body">
 
-          <div class="modal-body">
+                <div class="file-loading">
+                    <input id="input-image-4" name="input-image" type="file" accept="image/*">
+                </div>
 
-            <div class="file-loading">
-              <input id="input-image-4" name="input-image" type="file" accept="image/*">
+                <div id="kartik-file-errors"></div>
+
             </div>
 
-            <div id="kartik-file-errors"></div>
-            
-          </div>
-
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-            <button type="button" class="btn btn-primary" title="Your custom upload logic">保存</button>
-          </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                <!--<button type="button" class="btn btn-primary" title="Your custom upload logic">保存</button>-->
+            </div>
 
 
         </div>
-      </div>
     </div>
+</div>
 
 
-
-    <script>
+<script>
 
     $("#input-image-4").fileinput({
         allowedFileExtensions: ["jpg", "png", "gif"],
@@ -115,21 +117,29 @@
         resizeImage: true,
         resizeIfSizeMoreThan: 1000,
         uploadUrl: 'receive',
-    }).on('filepreupload', function() {
+    }).on('filepreupload', function () {
         $('#kv-success-box').html('');
-    }).on('fileuploaded', function(event, data) {
+    }).on('fileuploaded', function (event, data) {
         $('#kv-success-box').append(data.response.link);
         $('#kv-success-modal').modal('show');
-        window.location.href='/result';
+        window.location.href = '/result';
     });
 
+</script>
 
-    </script>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="/static/js/jquery-3.2.1.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/static/js/bootstrap.min.js"></script>
+<script>
+    $("#search_img").click(function () {
+        $.post("search_img", {query_str: "test"}, function (data) {
+            alert(data);
+        }).error(function (res) {
+            alert("请求出错，错误信息: " + res.responseText);
+        });
+    })
+</script>
+</body>
 
 </html>
