--- a/templates/result.html
+++ b/templates/result.html
@@ -50,6 +50,10 @@
         <h3 style="" id="img2txt_ret"></h3>
     </div>
 
+    <div style="height: 50px;max-width: 69em;margin: auto;padding-left: 10%;padding-right: 10%" class="box">
+        <h3 style="">检索类似图片： (吃内存问题暂未解决，可能关闭)</h3>
+    </div>
+
     <div id="grid-gallery" class="grid-gallery">
 
         <section class="grid-wrap">
