--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,8 @@
 
 <head>
 
+    <title>图片检索结果</title>
+
     <meta charset="UTF-8"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
