finish the img2text

--- a/static/css/result.css
+++ b/static/css/result.css
@@ -1,7 +1,7 @@
 .box {
     display: -webkit-flex; /* Safari */
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
 }
