add the txt2img function

--- a/templates/img2txt.html
+++ b/templates/img2txt.html
@@ -53,7 +53,7 @@
             <h3 align="center" style="width: 50%;line-height: 100px;padding-right: 30px">检索图像类别：{{ label }}</h3>
         </div>
         <div class="row_box">
-            <p style="">全部类别：{% for category in categories_list %} {{ category }}  &nbsp&nbsp {% endfor %}</p>
+            <p style="margin: auto">全部类别：{% for category in categories_list %} {{ category }}  &nbsp&nbsp {% endfor %}</p>
         </div>
     </div>
 
