--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 <div class="col-xs-12 col-md-offset-3">
     <div class="col-lg-6">
         <div class="input-group">
-            <input id="query_txt" type="text" class="form-control" placeholder="暂只支持desert mountains sea sunset trees五个种类，以空格隔开">
+            <input id="query_txt" type="text" class="form-control" placeholder="欢迎输入文字检索图片，或在右侧上传图片检索文字">
             <span class="input-group-btn">
                   <button id="input-image-1" type="button" class="btn btn-primary" data-toggle="modal"
                           data-target="#exampleModal" aria-label="Left Align">
