modify the url_path

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
         $('#kv-success-box').append(data.response.link);
         $('#kv-success-modal').modal('show');
         // console.log(data.response.success);
-        window.location.href = '/result?id=' + data.response.success;
+        window.location.href = '/img2txt_ret?id=' + data.response.success;
     });
 
 </script>
