完成img和text新页面的替换

--- a/static/css/result.css
+++ b/static/css/result.css
@@ -13,3 +13,11 @@
     justify-content: space-between;
     align-items: stretch;
 }
+
+.text_box {
+    display: -webkit-flex; /* Safari */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /*align-items: stretch;*/
+}
