--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
 
-<div class="skinBg" style="background-image: url('/static/images/65.jpg');"></div>
+<div class="skinBg" style="background-image: url('/static/images/index.jpg');"></div>
 
 <div class="content tc">
     <p class="logo"><img width="270" height="259" src="/static/images/logo.png" alt="logo"/></p>
