重新配置运行成功

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -72,13 +72,13 @@
                         <li data-nav-item-id="page-3"
                             class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-left">
                             <a href="#page-3" class="block-keep-ratio-content box-nav-item-link">
-                                <span class="box-text box-text-nav-item flexbox-center">全屏大图</span>
+                                <span class="box-text box-text-nav-item flexbox-center">返回结果页</span>
                             </a>
                         </li>
 
                         <li data-nav-item-id="page-4"
                             class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-right">
-                            <a href="/" class="block-keep-ratio-content box-nav-item-link">
+                            <a href="#page-4" class="block-keep-ratio-content box-nav-item-link">
                                 <span class="box-text box-text-nav-item flexbox-center">返回首页</span>
                             </a>
                         </li>
@@ -145,8 +145,8 @@
     <footer class="row footer js-footer">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-            <p class="copyright-text">Copyright &copy; 2018 Company Name
-                - Collect from </p>
+            <p class="copyright-text">Copyright &copy; 2018 罗聪健
+                - 毕业设计 </p>
 
         </div>
     </footer>
