--- a/templates/img.html
+++ b/templates/img.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Masonry Responsive Template</title>
+    <title>图片检索结果</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,8 +36,8 @@
         <div class="container">
             <header class="clearfix">
 
-        <span>CFM <span class="bp-icon bp-icon-about"
-                        data-content=" 未来媒体研究中心申恒涛教授团队自 2014 年成立以来，除瞄准高水平学术科研工作外，还高度重视创新人才培养工作。中心全体教师均承担本科和研究生教学，在培养学生从事高水平科研“硬实力”的同时，通过“听说读写”新四会能力的培养提升学生的“软实力”，助力培育具有跨界交叉融合、集成创新能力，具有国际视野的创新拔尖人才。三年来，团队培养优秀研究生 76 余人，其中包括博士生 9 人，硕士研究生共 67 人。"></span></span>
+        <span><a href="/">CFM</a><span class="bp-icon bp-icon-about"
+                                       data-content=" 未来媒体研究中心申恒涛教授团队自 2014 年成立以来，除瞄准高水平学术科研工作外，还高度重视创新人才培养工作。中心全体教师均承担本科和研究生教学，在培养学生从事高水平科研“硬实力”的同时，通过“听说读写”新四会能力的培养提升学生的“软实力”，助力培育具有跨界交叉融合、集成创新能力，具有国际视野的创新拔尖人才。三年来，团队培养优秀研究生 76 余人，其中包括博士生 9 人，硕士研究生共 67 人。"></span></span>
                 <h1>检索结果</h1>
 
             </header>
@@ -70,7 +70,7 @@
                             <div class="title-over">
                                 <h4><a href="/detail/{{ img["id"] }}">{{ img["name"] }}</a></h4>
                             </div>
-                            <a href="/detail/{{ img["id"] }}" style="color: inherit;">
+                            <a href="/detail/{{ img["id"] }}?rel={{ search_id }}&type=0" style="color: inherit;">
                                 <div class="post-hover text-center">
                                     <div class="inside">
                                         {#                                    <i class="fa fa-plus"></i>#}
@@ -94,9 +94,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <p class="copyright-text">Copyright &copy; 2084 Company Name
-                    | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect
-                    from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+                <p class="copyright-text">Copyright &copy; 2018 罗聪健
+                    - 毕业设计</p>
             </div>
         </div>
     </div>
