--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
 <div class="skinBg" style="background-image: url('/static/images/index.jpg');"></div>
 
 <div class="content tc">
-    <p class="logo"><img width="270" height="259" src="/static/images/logo.png" alt="logo"/></p>
+    <p class="logo"><img width="270" height="259" src="/static/images/logo.png" alt="logo" style="margin-top: 200px;"/></p>
 </div>
 
 <div class="col-xs-12 col-md-offset-3">
