--- a/templates/text.html
+++ b/templates/text.html
@@ -37,7 +37,7 @@
             <header class="clearfix">
 
         <span><a href="/">CFM</a> <span class="bp-icon bp-icon-about"
-                               data-content=" 未来媒体研究中心申恒涛教授团队自 2014 年成立以来，除瞄准高水平学术科研工作外，还高度重视创新人才培养工作。中心全体教师均承担本科和研究生教学，在培养学生从事高水平科研“硬实力”的同时，通过“听说读写”新四会能力的培养提升学生的“软实力”，助力培育具有跨界交叉融合、集成创新能力，具有国际视野的创新拔尖人才。三年来，团队培养优秀研究生 76 余人，其中包括博士生 9 人，硕士研究生共 67 人。"></span></span>
+                                        data-content=" 未来媒体研究中心申恒涛教授团队自 2014 年成立以来，除瞄准高水平学术科研工作外，还高度重视创新人才培养工作。中心全体教师均承担本科和研究生教学，在培养学生从事高水平科研“硬实力”的同时，通过“听说读写”新四会能力的培养提升学生的“软实力”，助力培育具有跨界交叉融合、集成创新能力，具有国际视野的创新拔尖人才。三年来，团队培养优秀研究生 76 余人，其中包括博士生 9 人，硕士研究生共 67 人。"></span></span>
                 <h1>检索结果</h1>
 
             </header>
@@ -65,24 +65,19 @@
         <div class="row">
             <div class="blog-masonry masonry-true">
                 {% for img in imgs %}
-                    <div class="post-masonry col-md-12 col-sm-12">
+                    <div class="post-masonry col-md-4 col-sm-6">
                         <div class="post-thumb">
-                            <p style="color: black;margin: 20px;">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ img["texts"] }}</p>
-                            <br><br>
+                            <img src="/static/wikipedia_images/{{ img["pic_id"] }}.jpg" alt="">
                             <div class="title-over">
                                 <h4><a href="/detail/{{ img["id"] }}">{{ img["name"] }}</a></h4>
                             </div>
-                            <a href="/detail/{{ img["id"] }}?rel={{ query_txt }}&type=1" style="color: inherit;">
+                            <a href="/detail/{{ img["id"] }}?rel={{ search_id }}&type=0" style="color: inherit;">
                                 <div class="post-hover text-center">
-                                    <div class="inside text_box">
-                                        <img src="/static/wikipedia_images/{{ img["pic_id"] }}.jpg"
-                                             style="max-height: 250px;max-width: 300px;vertical-align:center;margin: auto"
-                                             alt="">
-                                        <div style="margin: auto;">
-                                            <i class="fa fa-eye"></i>
-                                            <span>Click to view picture.</span>
-                                        </div>
+                                    <div class="inside">
+                                        {#                                    <i class="fa fa-plus"></i>#}
+                                        <h4>{{ img["name"] }}</h4>
+                                        <p style="text-align: left;margin: 10px;">{{ img["texts"][:300] + "...." }}</p>
+                                        <span>Click to get more.</span>
                                     </div>
                                 </div>
                             </a>
@@ -94,6 +89,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- FOOTER -->
 <footer class="site-footer">
