--- a/static/css/common.css
+++ b/static/css/common.css
@@ -25,7 +25,7 @@ p   {margin:0;}
 
 
 .content{padding:0 0 30px;
-        width:910px;
+        width:100%;
         margin:-10px auto auto;}
 
 .tc{text-align:center;}
