--- a/templates/index.html
+++ b/templates/index.html
@@ -10,44 +10,21 @@
     <link rel="stylesheet" href="/static/css/common.css"/>
 
     <!-- Bootstrap -->
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="/static/js/html5shiv.min.js"></script>
-    <script src="/static/js/respond.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link href="/static/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css"/>
-    <!-- if using RTL (Right-To-Left) orientation, load the RTL CSS file after fileinput.css by uncommenting below -->
-    <!-- link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/css/fileinput-rtl.min.css" media="all" rel="stylesheet" type="text/css" /-->
-    <!-- optionally uncomment line below if using a theme or icon set like font awesome (note that default icons used are glyphicons and `fa` theme can override it) -->
-    <!-- link https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css media="all" rel="stylesheet" type="text/css" /-->
+
     <script src="/static/js/jquery-3.2.1.min.js"></script>
-    <!-- piexif.min.js is only needed for restoring exif data in resized images and when you
-        wish to resize images before upload. This must be loaded before fileinput.min.js -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/piexif.min.js" type="text/javascript"></script>-->
+
     <script src="/static/js/plugins/piexif.min.js" type="text/javascript"></script>
-    <!-- sortable.min.js is only needed if you wish to sort / rearrange files in initial preview.
-        This must be loaded before fileinput.min.js -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/js/plugins/sortable.min.js" type="text/javascript"></script>-->
     <script src="/static/js/plugins/sortable.min.js" type="text/javascript"></script>
-    <!-- purify.min.js is only needed if you wish to purify HTML content in your preview for
-        HTML files. This must be loaded before fileinput.min.js -->
+
     <script src="/static/js/plugins/purify.min.js" type="text/javascript"></script>
-    <!-- popper.min.js below is needed if you use bootstrap 4.x. You can also use the bootstrap js
-       3.3.x versions without popper.min.js. -->
+
     <script src="/static/js/popper.min.js"></script>
-    <!-- bootstrap.min.js below is needed if you wish to zoom and preview file content in a detail modal
-        dialog. bootstrap 4.x is supported. You can also use the bootstrap js 3.3.x versions. -->
+
     <script src="/static/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- the main fileinput plugin file -->
     <script src="/static/js/fileinput.min.js"></script>
-    <!-- optionally uncomment line below for loading your theme assets for a theme like Font Awesome (`fa`) -->
-    <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.5/themes/fa/theme.min.js"></script -->
-    <!-- optionally if you need translation for your language then include  locale file as mentioned below -->
+
     <script src="/static/js/locales/zh.min.js"></script>
 
     <script src="/static/js/plugins/piexif.js"></script>
@@ -59,8 +36,8 @@
 
 <div class="skinBg" style="background-image: url('/static/images/index.jpg');"></div>
 
-<div class="content tc">
-    <p class="logo"><img width="270" height="259" src="/static/images/logo.png" alt="logo" style="margin-top: 200px;"/></p>
+<div class="content tc col-xs-12">
+    <p class="logo"><img src="/static/images/logo.png" alt="logo" style="margin-top: 200px;"/></p>
 </div>
 
 <div class="col-xs-12 col-md-offset-3">
