--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>The Story - Free Bootstrap Theme</title>
+    <title>文章详情</title>
 
     <!-- load stylesheets -->
     <!-- Google web font "Open Sans" -->
